unpackaged/main/default/objects/SharingEvaluation__c/SharingEvaluation__c.object-meta.xml
<CustomObject>
    <label>SharingEvaluation</label>
    <nameField>
        <label>SharingEvaluation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SharingEvaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>