unpackaged/main/default/objects/SharingEvaluation__c/fields/contentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>contentDocumentId__c</fullName>
    <label>contentDocumentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>