unpackaged/main/default/objects/SharingEvaluation__c/fields/contentDocumentLinkId__c.field-meta.xml
<CustomField>
    <fullName>contentDocumentLinkId__c</fullName>
    <label>contentDocumentLinkId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>