unpackaged/main/default/objects/SharingEvaluation__c/fields/ContentDocumentTitle__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentTitle__c</fullName>
    <label>ContentDocumentTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>